# lxqt-archiver

./: .gitattributes  .gitignore  AUTHORS  CHANGELOG  CMakeLists.txt  README.md
src/: CMakeLists.txt  about.ui  archiver.cpp  archiver.h  archivererror.cpp  archiveritem.cpp  archiveritem.h  archiverproxymodel.cpp  archiverproxymodel.h  corestrs.h  create.ui  createfiledialog.cpp  createfiledialog.h  dirtreeView.cpp  dirtreeView.h  extract.ui  extractfiledialog.cpp  extractfiledialog.h  filetreeView.cpp  filetreeView.h  fr-command-cfile.c  fr-command-tar.c  fr-command.h  fr-init.c  fr-init.h  fr-resources.c  fr-resources.h  fr-window.cpp  fr-window.h  lxqt-archiver.desktop.in  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  open-file.h  passworddialog.cpp  passworddialog.h  passworddialog.ui  preferences.h  progressdialog.cpp  (+2 more)
src/commands/: rpm2cpio
src/copy-n-paste/: libeggsmclient.la  libeggsmclient_la-eggdesktopfile.lo  libeggsmclient_la-eggsmclient-xsmp.lo  libeggsmclient_la-eggsmclient.lo
src/copy-n-paste/.libs/: libeggsmclient.la
src/core/: CMakeLists.txt  fr-archive.c  fr-command-7z.c  fr-command-ace.c  fr-command-alz.c  fr-command-ar.c  fr-command-bsdtar.c  fr-command-bsdtar.h  fr-command-cfile.c  fr-command-cpio.c  fr-command-img.c  fr-command-img.h  fr-command-iso.c  fr-command-lha.c  fr-command-rar.c  fr-command-rpm.c  fr-command-tar.c  fr-command-unarchiver.c  fr-command.c  fr-command.h  fr-init.c  gio-utils.c  glib-utils.c  glib-utils.h
src/translations/: desktop.ts  desktop_cs.ts  desktop_gl.ts  desktop_hr.ts  desktop_hu.ts  desktop_it.ts  desktop_ja.ts  desktop_pt.ts  desktop_ru.ts  desktop_sl.ts  desktop_tr.ts  lxqt-archiver.desktop.yaml  lxqt-archiver.ts  lxqt-archiver_ar.desktop.yaml  lxqt-archiver_ar.ts  lxqt-archiver_arn.ts  lxqt-archiver_ast.ts  lxqt-archiver_bg.desktop.yaml  lxqt-archiver_bg.ts  lxqt-archiver_ca.desktop.yaml  lxqt-archiver_ca.ts  lxqt-archiver_cs.desktop.yaml  lxqt-archiver_cs.ts  lxqt-archiver_cy.ts  lxqt-archiver_da.desktop.yaml  lxqt-archiver_da.ts  lxqt-archiver_de.desktop.yaml  lxqt-archiver_de.ts  lxqt-archiver_el.desktop.yaml  lxqt-archiver_el.ts  lxqt-archiver_en_GB.desktop.yaml  lxqt-archiver_en_GB.ts  lxqt-archiver_es.desktop.yaml  lxqt-archiver_es.ts  lxqt-archiver_et.desktop.yaml  lxqt-archiver_et.ts  lxqt-archiver_eu.desktop.yaml  lxqt-archiver_fi.desktop.yaml  lxqt-archiver_fi.ts  lxqt-archiver_fr.desktop.yaml  (+74 more)
